# Mandelbrot-explorer-3D

./: .gitmodules  AUTHORS  CMakeLists.txt
src/: check_cuda.cu  check_cuda.h  color.h  main.cc  mandel.cu  mandel.h  mandel_2d.cu  mandel_2d.h  vector.cc  vector.h  window.cc  window.h
src/engine/: engine.cc  engine.h  gui.h  renderer.h
src/mandelbrot_2D/: mandelbrot.cu  mandelbrot.h
src/mandelbrot_3D/: constants.h  mandelbrot_3D.cc  mandelbrot_3D.cu  mandelbrot_3D.h  ray.cu  ray.h
src/window/: window.cc  window.h
